# synth_ay38910a

./: .gitignore  AY38910A-uSynth.atsln  CMakeLists.txt  Doxyfile  EmbeddedProject-AY38910A.atsln  README.md  TODO.md  bloom.json  bloom.yaml  main.c  setup.sh
1602a_lcd/: 1602a_lcd.c  1602a_lcd.h
AY38910A-uSynth/: AY38910A-uSynth.cproj  main.c  project.yml
AY38910A-uSynth/inc/: clock.h  pin_config.h  types.h
AY38910A-uSynth/lib/Ay38910a/: Ay38910a.c  Ay38910a.h
AY38910A-uSynth/src/: Ay38910a.c  Ay38910a.h  main.c  pin_config.h
AY38910A-uSynth/test/: test_Ay38910a.c
Ay38910a/: Ay38910a.c  Ay38910a.h  clock.h
EmbeddedProject-AY38910A/: EmbeddedProject-AY38910A.componentinfo.xml  EmbeddedProject-AY38910A.cproj  main.c
EmbeddedProject-AY38910A/lib/Ay38910a/: Ay38910a.h
delay/: delay.c
inc/: ay38910a.h  delay.h  keyboard_ifc.h  lcd_1602a.h  logger.h  pin_config.h  pinout.h  settings.h  timer.h  usart.h
keyboard_ifc/: keyboard_ifc.c  keyboard_ifc.h  potentiometer.c
logger/: logger.c  logger.h
pinout/: pin_config.h  pinout.h
scripts/: ayctl.py  notegen.py  setup.sh
src/: ay38910a.c  delay.c  keyboard_ifc.c  lcd_1602a.c  logger.c  main.c  parallax.c  pin_config.c  potentiometer.c  settings.c  usart.c
